2006-12-08  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: Implement nautilus copy files action, 
	fixes BGO #344542

	* data/UIManagerLayout.xml:
	* src/Banshee.Base/ActionManager.cs: Added Copy item to Edit menu

2006-12-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Clean up
	some methods, and add a remove queue to hopefully speed things up when
	songs are removed from the library.

2006-12-08  Aaron Bockover  <aaron@abock.org>

	* src/PlayerInterface.cs: Fixed default accelerator for remove track
	confirmation dialog

	* src/Banshee.Widgets/SeekSlider.cs: Set the slider insensitive if no
	playback is happening (idle)

2006-12-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Prevent a
	crasher by wrapping an access into the Library's dictionary of tracks in a
	try/catch.

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* data/UIManagerLayout.xml: 
	* src/Banshee.Base/ActionManager.cs: Move the source properties action
	to the edit menu

	* src/Banshee.Base/SourceManager.cs: Set the source properties action's
	visibility and not sensitivity

	* src/Banshee.Base/Database.cs: Added new columns to the Playlists table

	* src/Banshee.Base/Source.cs: Make SortColumn and SortType virtual

	* src/Banshee.Base/Sources/PlaylistSource.cs: Override SortColumn and
	SortType properties to read/write the Playlists table for the playlist

	* src/Banshee.Base/Sources/LibrarySource.cs: Override SortColumn and
	SortType properties to read/write from/to GConf

	* src/Banshee.Base/Gui/SourceView.cs: Fixed right click source activation
	bug. Source should never change on a right click - only the highlight

	* data/banshee.schemas.in:
	* src/Banshee.Base/GConfKeys.cs: Added LibrarySortColumn, LibrarySortType

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.AudioProfiles/Pipeline.cs: