@@ -90,6 +90,8 @@
         <separator />
         <menuitem name="AddToPlaylist" action="AddToPlaylistAction" />
         <menuitem name="Rating" action="RatingAction" />
+        <separator />
+        <menuitem name="CopySongs" action="CopySongsAction" />
         <menuitem name="RemoveSongs" action="RemoveSongsAction" />
         <menuitem name="DeleteSongsFromDrive" action="DeleteSongsFromDriveAction" />
         <separator />
