@@ -1,5 +1,16 @@
 2006-12-08  Aaron Bockover  <abock@gnome.org>
 
+	* data/UIManagerLayout.xml: Added Copy to the context menu
+
+	* src/Banshee.Base/ActionManager.cs: Removed 'Song(s)' from the menu
+	items - that's implied
+
+	* src/PlayerInterface.cs: Use a UTF8 encoding for the nautilus file copy;
+	make the target static; show/hide the jump to playing item based on
+	our current playback state
+
+2006-12-08  Aaron Bockover  <abock@gnome.org>
+
 	* src/PlayerInterface.cs: Implement nautilus copy files action, 
 	fixes BGO #344542
 
